# stellar-trust-escrow

./: .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pr_description_41.md  pr_description_42.md  pr_description_912.md
.cargo/: audit.toml
.github/: pull_request_template.md
.husky/: pre-push
backend/: .env.example  DEPRECATION_IMPLEMENTATION.md  MFA_IMPLEMENTATION_SUMMARY.md  MFA_SETUP.md  jest.config.js  jest.setup.js  openapi.yaml  package.json  server.js
contracts/escrow_contract/: Cargo.toml  EMERGENCY_PAUSE.md
contracts/escrow_contract/src/: admin_transfer_tests.rs  arbiter_validation_tests.rs  batch_add_milestones_cap_tests.rs  bridge_tests.rs  dispute_cooldown_tests.rs  errors.rs  escrow_template_tests.rs  event_names.rs  event_tests.rs  events.rs  fuzz_tests.rs  gas_profiling.rs  integration_lifecycle_tests.rs  lib.rs  lock_time_enforcement_tests.rs  max_escrow_amount_tests.rs  nft_tests.rs  oracle.rs  oracle_fallback_tests.rs  oracle_overflow_tests.rs  oracle_tests.rs  pause_tests.rs  property_tests.rs  reentrancy_tests.rs  roles.rs  self_escrow_tests.rs  staking.rs  storage.rs  timelock_enforcement_tests.rs  token_whitelist_tests.rs  transfer_client_tests.rs  types.rs  unit_coverage_tests.rs  upgrade_tests.rs  version_tests.rs
contracts/escrow_contract/src/bridge/: mod.rs
contracts/escrow_contract/tests/: integration.rs
docs/: ARCHITECTURE.md  BUG_BOUNTY.md  (+36 more)
(+477 files in other folders)
