[workspace]
members = ["contracts/escrow_contract", "contracts/governance", "contracts/insurance_contract", "contracts/escrow_extensions", "contracts/shared"]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
